--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "node-red-node-feedparser": "0.1.*",
         "node-red-node-rbe": "0.2.*",
         "node-red-node-twitter": "0.1.*",
+        "node-sass": "^4.9.0",
         "nopt": "4.0.1",
         "oauth2orize": "1.11.0",
         "on-headers": "1.0.1",
