--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "basic-auth": "2.0.0",
         "bcryptjs": "2.4.3",
         "body-parser": "1.18.2",
+        "browserify": "^16.2.2",
         "cheerio": "0.22.0",
         "clone": "2.1.1",
         "cookie": "0.3.1",
@@ -55,7 +56,7 @@
         "jsonata": "1.5.0",
         "media-typer": "0.3.0",
         "memorystore": "1.6.0",
-        "mqtt": "2.15.1",
+        "mqtt": "^2.18.1",
         "multer": "1.3.0",
         "mustache": "2.3.0",
         "node-red-node-email": "0.1.*",
@@ -73,6 +74,7 @@
         "semver": "5.4.1",
         "sentiment": "2.1.0",
         "uglify-js": "3.3.6",
+        "web-mqtt-client": "^1.3.1",
         "when": "3.7.8",
         "ws": "1.1.5",
         "xml2js": "0.4.19"
@@ -82,7 +84,7 @@
     },
     "devDependencies": {
         "chromedriver": "^2.33.2",
-        "grunt": "~1.0.1",
+        "grunt": "^1.0.3",
         "grunt-chmod": "~1.1.1",
         "grunt-cli": "~1.2.0",
         "grunt-concurrent": "~2.3.1",
